--- a/aspnet-core/src/Autoboxd.Web/Pages/Items/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Items/Index.cshtml
@@ -10,9 +10,9 @@
 }
 <abp-card>
     <abp-card-header>
-        <h2>@L["Books"]</h2>
+        <h2>@L["Items"]</h2>
     </abp-card-header>
     <abp-card-body>
-        <abp-table striped-rows="true" id="BooksTable"></abp-table>
+        <abp-table striped-rows="true" id="ItemsTable"></abp-table>
     </abp-card-body>
 </abp-card>
