--- a/aspnet-core/src/Autoboxd.Web/Pages/Items/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Items/Index.cshtml
@@ -9,9 +9,15 @@
     <abp-script src="/Pages/Items/Index.js" />
 }
 <abp-card>
-    <abp-card-header>
-        <h2>@L["Items"]</h2>
-    </abp-card-header>
+    <abp-column size-md="_6">
+        <abp-card-title>@L["Items"]</abp-card-title>
+    </abp-column>
+    <abp-column size-md="_6" class="text-right">
+        <abp-button id="NewItemButton"
+                    text="@L["NewItem"].Value"
+                    icon="plus"
+                    button-type="Primary" />
+    </abp-column>
     <abp-card-body>
         <abp-table striped-rows="true" id="ItemsTable"></abp-table>
     </abp-card-body>
