--- a/aspnet-core/src/Autoboxd.Web/Pages/Items/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Items/Index.cshtml
@@ -1,9 +1,13 @@
 ﻿@page
+@using Microsoft.Extensions.Localization
+@using Microsoft.AspNetCore.Authorization
+
+@using Autoboxd.Permissions
 @using Autoboxd.Localization
 @using Autoboxd.Web.Pages.Items
-@using Microsoft.Extensions.Localization
 @model IndexModel
 @inject IStringLocalizer<AutoboxdResource> L
+@inject IAuthorizationService AuthorizationService
 @section scripts
 {
     <abp-script src="/Pages/Items/Index.js" />
@@ -13,10 +17,13 @@
         <abp-card-title>@L["Items"]</abp-card-title>
     </abp-column>
     <abp-column size-md="_6" class="text-right">
-        <abp-button id="NewItemButton"
-                    text="@L["NewItem"].Value"
-                    icon="plus"
-                    button-type="Primary" />
+        @if (await AuthorizationService.IsGrantedAsync(AutoboxdPermissions.Items.Create))
+        {
+            <abp-button id="NewItemButton"
+                        text="@L["NewItem"].Value"
+                        icon="plus"
+                        button-type="Primary" />
+        }
     </abp-column>
     <abp-card-body>
         <abp-table striped-rows="true" id="ItemsTable"></abp-table>
