Updating logo and temp background

--- a/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
+++ b/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
@@ -2,6 +2,12 @@
     --menu-color: #00000050;
     --card-color: #ffffff10;
 }
+
+body {
+    background: url(https://www.toptal.com/designers/subtlepatterns/patterns/footer_lodyas.png);
+    ;
+}
+
 nav.navbar {
     background-color: var(--menu-color) !important;
 }
@@ -17,3 +23,4 @@ h1, h2, h3, h4, h5, h6, p, span, div, td, tr {
 .card {
     background-color: var(--card-color);
 }
+
