--- a/aspnet-core/src/Autoboxd.Web/Pages/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Index.cshtml
@@ -11,19 +11,20 @@
 @section scripts {
     <abp-script src="/Pages/Index.js" />
 }
+<div class="hero-wrapper">
+    <div class="hero-image"></div>
+    <div class="backdropmask js-backdrop-fade"> </div>
+</div>
+
 <div class="container">
     <div class="p-5 text-center">
-        <div class="d-inline-block bg-success text-white p-1 h5 rounded mb-4 " role="alert">
-            <h5 class="m-1"> <i class="fas fa-rocket"></i> Congratulations, <strong>Autoboxd</strong> is successfully running!</h5>
-        </div>
         <h1>Welcome to the Application</h1>
 
         <p class="lead px-lg-5 mx-lg-5">@L["LongWelcomeMessage"]</p>
 
         @if (!CurrentUser.IsAuthenticated)
         {
-            <a abp-button="Primary" href="~/Account/Login" ><i class="fa fa-sign-in"></i> @L["Login"]</a>
-        }
+<a abp-button="Primary" href="~/Account/Login"><i class="fa fa-sign-in"></i> @L["Login"]</a>}
 
     </div>
     <div class="my-3 text-center">
