--- a/aspnet-core/src/Autoboxd.Web/Views/_ViewImports.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI
 @addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI.Bootstrap
-@addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI.Bundling
+@addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI
+@addTagHelper *, Autoboxd.Bundling
+@addTagHelper *, Autoboxd.Web
