--- a/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
+++ b/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
@@ -1,7 +1,9 @@
 ﻿:root {
+    --brand-color: #F2663A;
     --menu-color: #00000090;
     --card-color: #ffffff10;
-    --background-color: #101010;
+    --background-color: #141110;
+    --rule-color: #ffffff50;
 }
 
 body {
@@ -12,7 +14,7 @@ nav.navbar {
     background-color: var(--menu-color) !important;
 }
 
-.abp-application-layout {
+.abp-application-layout, .abp-account-layout {
     background-color: var(--background-color) !important;
 }
 
@@ -74,4 +76,44 @@ h1, h2, h3, h4, h5, h6, p, span, div, td, tr {
     transform: translateX(-50%);
     width: 1200px;
     z-index: 0;
+}
+
+.container.home {
+    padding-top: 300px;
+}
+
+.home .register-button {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.showcase img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.content-section .content-section-header small {
+    text-transform: uppercase;
+}
+
+.content-section .content-section-header hr {
+    border-bottom: 2px solid var(--rule-color);
+    margin-top: 2px;
+}
+
+.grid img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.review-image img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.component.item-link img:hover {
+    border: 2px solid var(--brand-color);
+    margin: -2px;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px)
 }
