Car page now gets item correctly

--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@page "{title}"
 @model Autoboxd.Web.Pages.Cars.IndexModel
 
-<h1>@Model.Title</h1>
+<h1>@Model.Name</h1>
+<h3>@Model.Year</h3>
+
+<p>@Model.Description</p>
