--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@page "{title}"
 @model Autoboxd.Web.Pages.Cars.IndexModel
 
+@await Component.InvokeAsync("HeroImage", new { imageUrl = @Model.ImagePath })
+
 <h1>@Model.Name</h1>
 <h3>@Model.Year</h3>
 
 <p>@Model.Description</p>
+
