More rating logic

--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -7,4 +7,6 @@
 <h3>@Model.Year</h3>
 
 <p>@Model.Description</p>
+<p>@Model.ItemId</p>
 
+@await Component.InvokeAsync("ItemRating", new { rating = @Model.Rating })
