--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ItemLink/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ItemLink/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Autoboxd.Web.Components.Item.ItemLinkViewModel
+﻿@model Autoboxd.Web.Components.ItemLink.ItemLinkViewModel
 
 <div class="component item-link">
     <a href="/">
