Lots more changes

--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -10,3 +10,41 @@
 <p>@Model.ItemId</p>
 
 @await Component.InvokeAsync("ItemRating", new { rating = @Model.Rating })
+
+<!-- Bit of padding for now -->
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
