--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ItemLink/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ItemLink/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Autoboxd.Web.Components.ItemLink.ItemLinkViewModel
 
 <div class="component item-link">
-    <a href="/">
+    <a href="/Cars/@Model.Path">
         <img src="@Model.ImageUrl" />
     </a>
 </div>
