List and List item changes

--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -6,7 +6,7 @@
 <h1>@Model.Name</h1>
 <h3>@Model.Year</h3>
 
-<p>@Model.Description</p>
+<p>@Html.Raw(Model.Description)</p>
 <p>@Model.ItemId</p>
 
 @await Component.InvokeAsync("ItemRating", new { rating = @Model.Rating })
