--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -11,6 +11,12 @@
 
 @await Component.InvokeAsync("ItemRating", new { rating = @Model.Rating })
 
+@await Component.InvokeAsync("ContentSection", new { title = "120 comments" })
+
+<abp-input asp-for="@Model.Comment" label="Add a comment" />
+
+<a abp-button="Primary" class="register-button">Post comment</a>
+
 <!-- Bit of padding for now -->
 <br />
 <br />
