--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@page "{title}"
 @model Autoboxd.Web.Pages.Cars.IndexModel
+@section scripts
+{
+    <abp-script src="/Pages/Cars/Index.js" />
+}
 
 @await Component.InvokeAsync("HeroImage", new { imageUrl = @Model.ImagePath })
 
@@ -7,7 +11,7 @@
 <h3>@Model.Year</h3>
 
 <p>@Html.Raw(Model.Description)</p>
-<p>@Model.ItemId</p>
+<p id="itemId">@Model.ItemId</p>
 
 @await Component.InvokeAsync("ItemRating", new { rating = @Model.Rating })
 
@@ -16,6 +20,7 @@
 <abp-input asp-for="@Model.Comment" label="Add a comment" />
 
 <a abp-button="Primary" class="register-button">Post comment</a>
+<a abp-button="Secondary" id="addToList">Add to list</a>
 
 <!-- Bit of padding for now -->
 <br />
