--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ItemLink/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ItemLink/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Autoboxd.Web.Components.ItemLink.ItemLinkViewModel
 
-<div class="component item-link">
+<div class="component item-link shadow">
     <a href="/Cars/@Model.Path">
         <img src="@Model.ImageUrl" />
     </a>
