--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ListGrid/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ListGrid/Index.cshtml
@@ -1,4 +1,20 @@
 ﻿@model Autoboxd.Web.Components.ListGrid.ListGridViewModel
 
 <div class="component list-grid">
+    <div class="row">
+        <div class="col-2">
+            <div class="row" style="margin-top: 15px">
+                @foreach (var path in Model.ImagePaths)
+                {
+                <div class="col-12 p-1" style="margin-top: -15px">
+                    <img class="card shadow" src="/download/@path" style="width: 100%; height: 100%; border-radius:5px;" />
+                </div>
+                }
+            </div>
+        </div>
+        <div class="col-10">
+            <h3>@Model.Title</h3>
+            <p>@Html.Raw(Model.Description)</p>
+        </div>
+    </div>
 </div>
