--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ContentSection/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ContentSection/Index.cshtml
@@ -5,7 +5,7 @@
         <small>@Model.Title</small>
         @if (Model.Link != null)
         {
-            <small class="float-right">
+            <small class="float-right link">
                 <a href="@Model.Link">@Model.LinkText <i class="fas fa-angle-right mx-1 my-2"></i></a>
             </small>
         }
