--- a/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
+++ b/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
@@ -7,6 +7,9 @@
     --card-color: #ffffff10;
     --background-color: #141110;
     --background-color-light: #403a38;
+    --background-color-highlight-subtle: #ffffff06;
+    --background-color-highlight: #ffffff10;
+    --background-color-highlight-strong: #ffffff30;
     --rule-color: #ffffff50;
 }
 
@@ -95,24 +98,103 @@ h1 {
     text-transform: uppercase;
 }
 
-.showcase .item-link {
-    height: 128px;
+.component.item-link {
     width: 100%;
     overflow: hidden;
     border-radius: 5px;
+    text-decoration: none;
 }
 
-.showcase img {
+.component.item-link:hover {
+    border: 2px solid var(--brand-color);
+    margin: -2px;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    color: var(--light);
+    text-decoration: none;
+}
+
+.component.item-link .name {
+    text-transform: uppercase;
+    font-size: 14px;
+    color: var(--background-color-highlight-strong);
+    text-decoration: none;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+}
+
+.component.item-link:hover .name {
+    color: var(--light);
+    font-weight: bold;
+}
+
+.showcase .component.item-link .imageContainer {
+    height: 134px;
+    overflow: hidden;
+    position: relative;
+}
+
+.showcase .component.item-link .image {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.showcase .component.item-link .imageContainer {
+    height: 134px;
+    overflow: hidden;
+    position: relative;
+}
+
+.showcase .component.item-link .image {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.grid .component.item-link .imageContainer {
+    height: 50px;
+    overflow: hidden;
+    position: relative;
+}
+
+.grid .component.item-link .image {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+}
+
+.grid .button {
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .content-section .content-section-header small {
     text-transform: uppercase;
 }
 
+.content-section a {
+    color: var(--light);
+    text-decoration:none;
+}
+
+.content-section .link {
+    padding-left: 8px;
+    padding-right: 5px;
+    border-radius: 5px;
+}
+
+.content-section .link:hover {
+   background-color: var(--background-color-highlight);
+}
+
 .content-section .content-section-header hr {
     border-bottom: 2px solid var(--rule-color);
     margin-top: 2px;
+    clear: both;
 }
 
 .grid img {
@@ -125,16 +207,34 @@ h1 {
     border-radius: 5px;
 }
 
-.component.item-link:hover {
-    border: 2px solid var(--brand-color);
-    margin: -2px;
-    width: calc(100% + 4px);
-    height: calc(100% + 4px)
+.component.list-grid .description {
+    max-height: 100px;
+    overflow: hidden;
 }
 
-.showcase .component.item-link:hover {
-    height: 132px;
+.component.list-grid > .row {
+    padding: 5px 1px;
 }
+
+.component.list-grid > .row:hover {
+    background-color: var(--background-color-highlight-subtle);
+    border-radius: 5px;
+}
+
+.component.list-grid .like, .component.list-grid .share {
+    color: var(--light);
+    cursor:pointer;
+}
+
+.component.list-grid .like {
+    margin-right: 2px;
+}
+
+.component.list-grid .like:hover, .component.list-grid .share:hover {
+    background-color: var(--background-color-highlight);
+    border-radius: 5px;
+}
+
 
 .modal-content {
     background-color: var(--background-color-light);
