--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -2,7 +2,7 @@
 @model Autoboxd.Web.Pages.Cars.IndexModel
 @section scripts
 {
-    <abp-script src="/Pages/Cars/Index.js" />
+    <abp-script src="/Pages/Cars/Index.cshtml.js" />
 }
 
 @await Component.InvokeAsync("HeroImage", new { imageUrl = @Model.ImagePath })
