--- a/aspnet-core/src/Autoboxd.Web/Pages/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Index.cshtml
@@ -53,8 +53,16 @@
 
     <div class="row">
         <div class="col-lg-7">
-            @await Component.InvokeAsync("ContentSection", new { title = "Recent reviews", link = "https://www.google.com" })
-            @await Component.InvokeAsync("ReviewDetails", new { imageUrl = "/images/car4.jpg", title = "Lotus Esprit", description = "stuff" })
+            @await Component.InvokeAsync("ContentSection", new { title = "Popular reviews", link = "https://www.google.com" })
+            @foreach (var review in Model.PopularReviews)
+            {
+                @await Component.InvokeAsync("ReviewDetails", new { 
+                   imageUrl = "/download/" + review.Item.Path + "-small.jpg", 
+                   title = review.Title, 
+                   description = review.Description,
+                   path = review.Item.Path 
+               })
+            }
         </div>
         <div class="col-lg-5">
             @await Component.InvokeAsync("ContentSection", new { title = "Popular lists", link = "https://www.google.com" })
