--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ListGrid/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ListGrid/Index.cshtml
@@ -26,7 +26,7 @@
             <a href="www.google.com">
                 <h4>@Model.Title</h4>
             </a>
-            <small>Created by: <strong>@Model.Author</strong></small>
+            <small>Created by: <a href="/"><strong>@Model.Author</strong></a></small>
             <div class="description">@Html.Raw(Model.Description)</div>
 </div>
     </div>
