--- a/aspnet-core/src/Autoboxd.Web/Pages/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Index.cshtml
@@ -11,21 +11,28 @@
 @section scripts {
     <abp-script src="/Pages/Index.js" />
 }
+@if (!CurrentUser.IsAuthenticated)
+{
+    @await Component.InvokeAsync("HeroImage", new { imageUrl = "/images/hero.jpg" })
+}
+<div class="container @(!CurrentUser.IsAuthenticated ? "home" : "")">
+    @if (!CurrentUser.IsAuthenticated)
+    {
+        <div class="p-5 text-center">
+            <h1 style="font-weight: bold">Track classic automobiles.</h1>
+            <h1>Save and list your favourites.</h1>
+            <h1>Share your thoughts with the world.</h1>
+            <br />
 
-@await Component.InvokeAsync("HeroImage", new { imageUrl = "/images/hero.jpg" })
-
-<div class="container home">
-    <div class="p-5 text-center">
-        <h1 style="font-weight: bold">Track classic automobiles.</h1>
-        <h1>Save and list your favourites.</h1>
-        <h1>Share your thoughts with the world.</h1>
-        <br />
-
-        @if (!CurrentUser.IsAuthenticated)
-        {
-<a abp-button="Primary" class="register-button" href="~/Account/Register">@L["Button:JoinHere"]</a>}
-
-    </div>
+            <a abp-button="Primary" class="register-button" href="~/Account/Register">@L["Button:JoinHere"]</a>
+        </div>
+    }
+    else
+    {
+        <div class="p-5 text-center">
+            <h1>Welcome back @CurrentUser.UserName</h1>
+        </div>
+    }
 
     @await Component.InvokeAsync("ContentSection", new { title = "Featured cars", link = "https://www.google.com" })
     <div class="showcase">
@@ -56,17 +63,22 @@
             @await Component.InvokeAsync("ContentSection", new { title = "Popular reviews", link = "https://www.google.com" })
             @foreach (var review in Model.PopularReviews)
             {
-                @await Component.InvokeAsync("ReviewDetails", new { 
-                   imageUrl = "/download/" + review.Item.Path + "-small.jpg", 
-                   title = review.Title, 
+                @await Component.InvokeAsync("ReviewDetails", new
+                {
+                   imageUrl = "/download/" + review.Item.Path + "-small.jpg",
+                   title = review.Title,
                    description = review.Description,
-                   path = review.Item.Path 
+                   path = review.Item.Path,
+                   author = review.Creator?.UserName
                })
             }
         </div>
         <div class="col-lg-5">
             @await Component.InvokeAsync("ContentSection", new { title = "Popular lists", link = "https://www.google.com" })
-            @await Component.InvokeAsync("ListGrid", new { listId = new Guid("C3D683B1-00F8-5777-95B4-39FFF911CEED") })
+            @foreach (var list in Model.PopularLists)
+            {
+                @await Component.InvokeAsync("ListGrid", new { listDto = list })
+            }
         </div>
     </div>
 </div>
