--- a/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
+++ b/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
@@ -34,6 +34,15 @@ h1 {
     font-family: 'Roboto Slab', serif;
 }
 
+a {
+    color: var(--brand-color);
+}
+
+    a:hover, a:focus, a:active {
+        color: var(--brand-color);
+        filter: brightness(85%);
+    }
+
 .card {
     background-color: var(--card-color);
 }
@@ -202,7 +211,12 @@ h1 {
     border-radius: 5px;
 }
 
-.review-image img {
+.component.review-details .row:hover {
+    background-color: var(--background-color-highlight-subtle);
+    border-radius: 5px;
+}
+
+.component.review-details .review-image img {
     width: 100%;
     border-radius: 5px;
 }
@@ -245,4 +259,8 @@ footer {
     position: absolute;
     width: 100%;
     margin-top: 50px;
+}
+
+.page.cars .content{
+    margin-top: 450px;
 }
