--- a/aspnet-core/src/Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic/Themes/Basic/Layouts/Application.cshtml
+++ b/aspnet-core/src/Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic/Themes/Basic/Layouts/Application.cshtml
@@ -3,6 +3,7 @@
 @using Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic.Bundling
 @using Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic.Themes.Basic.Components.MainNavbar
 @using Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic.Themes.Basic.Components.PageAlerts
+@using Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic.Themes.Basic.Components.Footer
 @using Volo.Abp.AspNetCore.Mvc.UI.Theming
 @using Volo.Abp.AspNetCore.Mvc.UI.Widgets.Components.WidgetScripts
 @using Volo.Abp.AspNetCore.Mvc.UI.Widgets.Components.WidgetStyles
@@ -10,24 +11,22 @@
 @using Volo.Abp.Ui.Branding
 @inject IBrandingProvider BrandingProvider
 @inject IPageLayout PageLayout
-@{
-    Layout = null;
-    var containerClass = ViewBag.FluidLayout == true ? "container-fluid" : "container"; //TODO: Better and type-safe options
+@{ Layout = null;
+                var containerClass = ViewBag.FluidLayout == true ? "container-fluid" : "container"; //TODO: Better and type-safe options
 
-    var pageTitle = ViewBag.Title == null ? BrandingProvider.AppName : ViewBag.Title; //TODO: Discard to get from Title
+                var pageTitle = ViewBag.Title == null ? BrandingProvider.AppName : ViewBag.Title; //TODO: Discard to get from Title
 
-    if (PageLayout.Content.Title != null)
-    {
-        if (!string.IsNullOrWhiteSpace(pageTitle))
-        {
-            pageTitle = " | " + pageTitle;
-        }
+                if (PageLayout.Content.Title != null)
+                {
+                    if (!string.IsNullOrWhiteSpace(pageTitle))
+                    {
+                        pageTitle = " | " + pageTitle;
+                    }
 
-        pageTitle = PageLayout.Content.Title + pageTitle;
-    }
+                    pageTitle = PageLayout.Content.Title + pageTitle;
+                }
 
-    var rtl = CultureHelper.IsRtl ? "rtl" : string.Empty;
-}
+                var rtl = CultureHelper.IsRtl ? "rtl" : string.Empty; }
 
 <!DOCTYPE html>
 
@@ -77,20 +76,6 @@
 
     @await Component.InvokeLayoutHookAsync(LayoutHooks.Body.Last, StandardLayouts.Application)
 
-
-    <footer>
-        <div class="mt-5 my-3 text-center">
-            <h3>Meet the ABP Commercial</h3>
-            <p>A Complete Web Application Platform Built on the ABP Framework</p>
-        </div>
-
-        <div class="mb-5 text-center">
-            <p class="align-middle">
-                <a href="https://twitter.com/abpframework" target="_blank" class="mx-2"><i class="fa fa-twitter"></i><span class="text-secondary"> Abp Framework</span></a>
-                <a href="https://twitter.com/abpcommercial" target="_blank" class="mx-2"><i class="fa fa-twitter"></i><span class="text-secondary"> Abp Commercial</span></a>
-                <a href="https://github.com/abpframework/abp" target="_blank" class="mx-2"><i class="fa fa-github"></i><span class="text-secondary"> abpframework</span></a>
-            </p>
-        </div>
-    </footer>
+    @(await Component.InvokeAsync<FooterViewComponent>())
 </body>
 </html>
