--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/All/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/All/Index.cshtml
@@ -5,11 +5,14 @@
     <abp-script src="/Pages/Cars/All/Index.cshtml.js" />
 }
 
+<div class="row offset-2 col-8 mb-4">
+    <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+</div>
 <div class="showcase">
     <div class="row p-3">
         @foreach (var item in Model.Items)
         {
-        <div class="col-lg-3 p-1">@await Component.InvokeAsync("ItemLink", new { imageUrl = "/download/" + item.Path + "-small.jpg", path = item.Path, name = item.Name })</div>
+            <div class="col-lg-3 p-1">@await Component.InvokeAsync("ItemLink", new { imageUrl = "/download/" + item.Path + "-small.jpg", path = item.Path, name = item.Name })</div>
         }
     </div>
 </div>
