--- a/aspnet-core/src/Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic/Themes/Basic/Components/Toolbar/Default.cshtml
+++ b/aspnet-core/src/Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic/Themes/Basic/Components/Toolbar/Default.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Volo.Abp.AspNetCore.Mvc.UI.Theme.Shared.Toolbars
 @model Toolbar
+@*<input type="text" placeholder="Search..">*@
 @foreach (var toolbarItem in Model.Items.OrderBy(i => i.Order))
 {
     <li class="nav-item">@(await Component.InvokeAsync(toolbarItem.ComponentType))</li>
