--- a/aspnet-core/src/Autoboxd.Web/Pages/Reviews/All/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Reviews/All/Index.cshtml
@@ -13,7 +13,7 @@
            imageUrl = "/download/" + review.Item.Path + "-small.jpg",
            title = review.Title,
            description = review.Description,
-           path = review.Item.Path,
+           path = "/reviews/user/review-name", // TODO: Change me
            author = review.Creator?.UserName
        })
     </div>
