--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/CommentSection/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/CommentSection/Index.cshtml
@@ -10,6 +10,7 @@
             <div class="col-2">@comment.Creator.UserName</div>
             <div class="col-10">@comment.Value</div>
         </div>
+        <hr class="dropdown-divider" /> // TODO: Better class name
         }
     </div>
     <br/>
