--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ItemLink/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ItemLink/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Autoboxd.Web.Components.ItemLink.ItemLinkViewModel
 
 <div class="component item-link shadow">
-    <a href="/Cars/@Model.Path">
+    <a href="@Model.Path">
         <div class="imageContainer">
             <img class="image" src="@Model.ImageUrl" />
         </div>    
