--- a/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
+++ b/aspnet-core/src/Autoboxd.Web/wwwroot/global-styles.css
@@ -302,3 +302,7 @@ footer {
 .dropdown-menu .dropdown-item:hover {
     background-color: var(--background-color-highlight);
 }
+
+.dropdown-divider {
+    border-color: var(--background-color-highlight);
+}
