--- a/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Cars/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="content">
         <div class="row">
             <div class="col-3">
-                <div class="d-none" id="itemId">@Model.ItemId</div>
+                <div class="card" style="margin-bottom: 16px; height: 250px; line-height: 250px; text-align:center;">Additional images</div>
                 <abp-dropdown class="addToListButton">
                     <abp-dropdown-button button-type="Primary" icon-type="FontAwesome" icon="plus" text="Add to list" />
                     <abp-dropdown-menu>
@@ -18,28 +18,27 @@
                         {
                             <abp-dropdown-item id="@list.Id" class="addToList">@list.Title</abp-dropdown-item>
                         }
+                        <abp-dropdown-divider></abp-dropdown-divider>
+                        <abp-dropdown-item id="createNewList">Add to new list...</abp-dropdown-item>
                     </abp-dropdown-menu>
                 </abp-dropdown>
-
-                <abp-button-toolbar class="rating">
-                    <abp-button-group class="mr-2">
-                        <abp-button icon-type="FontAwesome" icon="star"></abp-button>
-                        <abp-button icon-type="FontAwesome" icon="star"></abp-button>
-                        <abp-button icon-type="FontAwesome" icon="star"></abp-button>
-                        <abp-button icon-type="FontAwesome" icon="star"></abp-button>
-                        <abp-button icon-type="FontAwesome" icon="star"></abp-button>
-                    </abp-button-group>
-                </abp-button-toolbar>
+                <div class="card" style="margin-bottom: 16px; height: 150px; line-height: 150px; text-align:center;">Rating</div>
+                <div class="card" style="margin-top: 16px; margin-bottom: 16px; height: 200px; line-height: 200px; text-align:center;">Advert</div>
+                <div class="card" style="margin-top: 16px; margin-bottom: 16px; height: 300px; line-height: 300px; text-align:center;">Featured in lists</div>
+                <div class="d-none" id="itemId">@Model.ItemId</div>
             </div>
             <div class="col-9">
-                <div class="title">
+                <div class="title" style="display: flex;">
                     <h1>@Model.Name</h1>
-                    <h3>@Model.Year</h3>
+                    <h3 style="margin-left: 10px; line-height: 50px; opacity: 70%;">@Model.Year</h3>
                 </div>
                 <div class="card pl-3 pr-3">
                     <p>@Html.Raw(Model.Description)</p>
                 </div>
 
+                <div class="card pl-3 pr-3 mt-3 mb-3">
+                    <p style="height: 300px; line-height: 300px; text-align:center;">Car specifications</p>
+                </div>
                 @await Component.InvokeAsync("CommentSection", new { comments = Model.Comments })
 
                 <abp-input asp-for="@Model.Comment" label="Add a comment" />
