--- a/aspnet-core/src/Autoboxd.Web/Pages/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Pages/Index.cshtml
@@ -39,7 +39,7 @@
         <div class="row p-3">
             @foreach (var item in Model.FeaturedItems)
             {
-                <div class="col-lg-3 col-sm-6 col-12 p-1">@await Component.InvokeAsync("ItemLink", new { imageUrl = "/download/" + item.Path + "-small.jpg", path = item.Path, name = item.Name })</div>
+                <div class="col-lg-3 col-sm-6 col-12 p-1">@await Component.InvokeAsync("ItemLink", new { imageUrl = "/download/" + item.Path + "-small.jpg", path = "/Cars/" + item.Path, name = item.Name })</div>
             }
         </div>
     </div>
@@ -51,7 +51,7 @@
             {
                 <div class="col-lg-1 col-sm-2 col-3 p-1">
                     <abp-button abp-tooltip="@item.Name" class="button">
-                        @await Component.InvokeAsync("ItemLink", new { imageUrl = "/download/" + item.Path + "-tiny.jpg", path = item.Path })
+                        @await Component.InvokeAsync("ItemLink", new { imageUrl = "/download/" + item.Path + "-tiny.jpg", path = "/Cars/" + item.Path })
                     </abp-button>
                 </div>
             }
@@ -68,9 +68,9 @@
                    imageUrl = "/download/" + review.Item.Path + "-small.jpg",
                    title = review.Title,
                    description = review.Description,
-                   path = review.Item.Path,
+                   path = "/reviews/user/review-name",  // TODO: Change this
                    author = review.Creator?.UserName
-               })
+                })
             }
         </div>
         <div class="col-lg-5">
