--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ListGrid/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ListGrid/Index.cshtml
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-2">
             <div class="row" style="margin-top: 15px">
-                <a href="www.google.com">
+                <a href="@Model.FullPath">
                     @foreach (var path in Model.ImagePaths.Select((value, i) => (value, i)))
                     {
                         var index = 100 - path.i;
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="col-10">
-            <a href="www.google.com">
+            <a href="@Model.FullPath">
                 <h4>@Model.Title</h4>
             </a>
             <small>Created by: <a href="/"><strong>@Model.Author</strong></a></small>
