--- a/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ReviewDetails/Index.cshtml
+++ b/aspnet-core/src/Autoboxd.Web/Views/Shared/Components/ReviewDetails/Index.cshtml
@@ -7,7 +7,9 @@
         </div>
         <div class="review-content col-8">
             <div class="review-header">
-                <h3 class="review-title">@Model.Title</h3>
+                <a href="@Model.Path">
+                    <h3 class="review-title">@Model.Title</h3>
+                </a>
             </div>
             <div class="review-details"></div>
             <div class="review-content">
